Update full screen mode

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="zh-TW">
   <head>
@@ -16,7 +15,7 @@
     <link rel="manifest" href="/manifest.json" />
     
     <!-- 設定 iOS 主畫面圖示 -->
-    <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/2060/2060250.png" />
+    <link rel="apple-touch-icon" href="/kansai.png" />
     
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -56,7 +55,7 @@
         padding-right: env(safe-area-inset-right);
       }
     </style>
-  <script type="importmap">
+<script type="importmap">
 {
   "imports": {
     "react": "https://aistudiocdn.com/react@^19.2.0",
