--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
+        darkMode: 'class', // Enable manual dark mode
         theme: {
           extend: {
             colors: {
@@ -47,6 +48,9 @@
       * { -webkit-tap-highlight-color: transparent; }
       body { margin: 0; padding: 0; background-color: #fcfbf9; }
       
+      /* Dark mode background */
+      html.dark body { background-color: #0f172a; }
+
       /* 確保全螢幕時，內容不會被 iPhone 瀏海或底部橫條擋住 */
       body {
         padding-top: env(safe-area-inset-top);
@@ -55,13 +59,16 @@
         padding-right: env(safe-area-inset-right);
       }
     </style>
-  <script type="importmap">
+<script type="importmap">
 {
   "imports": {
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "@dnd-kit/core": "https://aistudiocdn.com/@dnd-kit/core@^6.3.1",
+    "@dnd-kit/sortable": "https://aistudiocdn.com/@dnd-kit/sortable@^10.0.0",
+    "@dnd-kit/utilities": "https://aistudiocdn.com/@dnd-kit/utilities@^3.2.2",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
+    "react/": "https://aistudiocdn.com/react@^19.2.1/",
+    "react": "https://aistudiocdn.com/react@^19.2.1",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
     "lz-string": "https://aistudiocdn.com/lz-string@^1.5.0"
   }
