--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       body { margin: 0; padding: 0; background-color: #fcfbf9; }
       
       /* Dark mode background */
-      html.dark body { background-color: #0f172a; }
+      html.dark body { background-color: #020617; }
 
       /* 確保全螢幕時，內容不會被 iPhone 瀏海或底部橫條擋住 */
       body {
@@ -62,15 +62,15 @@
 <script type="importmap">
 {
   "imports": {
+    "react": "https://aistudiocdn.com/react@^19.2.1",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
+    "react/": "https://aistudiocdn.com/react@^19.2.1/",
+    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
     "@dnd-kit/core": "https://aistudiocdn.com/@dnd-kit/core@^6.3.1",
     "@dnd-kit/sortable": "https://aistudiocdn.com/@dnd-kit/sortable@^10.0.0",
-    "@dnd-kit/utilities": "https://aistudiocdn.com/@dnd-kit/utilities@^3.2.2",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
-    "react/": "https://aistudiocdn.com/react@^19.2.1/",
-    "react": "https://aistudiocdn.com/react@^19.2.1",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
-    "lz-string": "https://aistudiocdn.com/lz-string@^1.5.0"
+    "lz-string": "https://aistudiocdn.com/lz-string@^1.5.0",
+    "@dnd-kit/utilities": "https://aistudiocdn.com/@dnd-kit/utilities@^3.2.2"
   }
 }
 </script>
